--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
+    "cos-js-sdk-v5": "^1.10.1",
+    "cos-nodejs-sdk-v5": "^2.15.4",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.18.1",
+    "tencentcloud-sdk-nodejs": "^4.1.99",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
