feat:new and beautiful login page & chore:add local sqlite3 adapter

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,5 @@ CDN_AUTH_PARAM=sign
 # CDN_AUTH_KEY_BACKUP: CDN 备用鉴权密钥
 # CDN_AUTH_TTL: 签名有效期（秒），推荐 10-3600 秒
 # CDN_AUTH_PARAM: 签名参数名，通常为 'sign'
+
+SQLITE_PATH=./data.sqlite
