chore: add MySQL adaptation

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,7 @@ CDN_AUTH_PARAM=sign
 SQLITE_PATH=./data.sqlite
 
 ALLOW_REGISTER=true
+
+
+#MySQL 配置(如有)
+DATABASE_URL=mysql://username:password@host:port/database
