--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@zip.js/zip.js": "^2.7.52",
     "bcrypt": "^6.0.0",
     "cos-js-sdk-v5": "^1.10.1",
     "cos-nodejs-sdk-v5": "^2.15.4",
@@ -19,6 +20,7 @@
     "mysql2": "^3.14.5",
     "nuxt": "^3.18.1",
     "sqlite3": "^5.1.7",
+    "streamsaver": "^2.0.6",
     "tencentcloud-sdk-nodejs": "^4.1.99",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
