--- a/.env.example
+++ b/.env.example
@@ -49,4 +49,4 @@ ALLOW_REGISTER=true
 
 
 #MySQL 配置(如有)
-DATABASE_URL=mysql://username:password@host:port/database
+#DATABASE_URL=mysql://username:password@host:port/database
