chore: 注释掉 windows 构建中的 env
此提交注释掉了 windows 构建工作流程文件中的 `env` 部分。

这样做是为了暂时禁用环境变量的设置，以便进行调试或测试。

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -63,7 +63,7 @@ jobs:
         run: npm config set msvs_version 2022
 
       - name: Install dependencies
-        env:
+        #env:
           # 如遇 bcrypt/sqlite3 等预编译二进制不匹配，可临时打开下一行强制源码编译
           # npm_config_build_from_source: "true"
         run: npm ci
