fix(ci): 修复 Windows 构建工件上传路径
- 修复了 Windows 构建中工件上传路径不正确的问题。
- 之前的配置导致工件上传失败。
- 更新了路径以包含 server, public, package.json 和 start.*。

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -54,5 +54,10 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: nuxt-output-windows-node22
-          path: .output
+          path: |
+            ./.output/server/**
+            ./.output/public/**
+            ./.output/package.json
+            ./.output/start.*
+          if-no-files-found: error
           retention-days: 7
