chore(ci): 添加调试步骤到 Windows 构建工作流
添加一个调试步骤，以便在 Windows 构建失败时更容易诊断问题。

* 打印工作区内容
* 列出 .output 目录中的前 20 个文件

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -61,3 +61,10 @@ jobs:
             ./.output/start.*
           if-no-files-found: error
           retention-days: 7
+
+      - name: Debug .output
+        shell: pwsh
+        run: |
+          Write-Host "Workspace: $env:GITHUB_WORKSPACE"
+          Get-ChildItem -Force
+          if (Test-Path .output) { Get-ChildItem -Recurse -Force .output | Select-Object -First 20 }
