feat: 完善部署文档，修复文件上传下载功能，增加HTTPS配置
- 完善了README.md中的部署文档，增加了从github workflows下载编译
  文件的说明，以及使用PM2启动服务器的说明。
- 修复了文件上传下载功能。
- 增加了HTTPS配置选项，允许用户配置网站是否使用HTTPS。
- 在ubuntu构建脚本中自动加载.env文件。

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,6 @@ ALLOW_REGISTER=true
 
 #MySQL 配置(如有)
 #DATABASE_URL=mysql://username:password@host:port/database
+
+#你的网站是否为HTTPS（涉及到cookie选项）
+HTTPS=true
