--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -51,8 +51,31 @@ jobs:
           
           cat > .output/start.sh << 'EOF'
           #!/bin/bash
+
+          # 设置环境变量
           export PORT=${PORT:-3000}
           export NITRO_HOST=${NITRO_HOST:-0.0.0.0}
+          export NODE_ENV=production
+
+          # 关键：加载与 start.sh 同目录的 .env 文件
+          SCRIPT_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
+          ENV_FILE="$SCRIPT_DIR/.env"
+
+          # 检查 .env 文件是否存在
+          if [ -f "$ENV_FILE" ]; then
+              echo "Loading environment variables from: $ENV_FILE"
+              # 读取.env文件，排除空行和注释，然后导出变量
+              export $(grep -v '^#' "$ENV_FILE" | xargs)
+          else
+              echo "Warning: .env file not found at $ENV_FILE"
+          fi
+
+          # 再次检查 SESSION_SECRET 是否已设置
+          if [ -z "NUXT_SESSION_SECRET" ]; then
+              echo "ERROR: SESSION_SECRET environment variable is required"
+              exit 1
+          fi
+
           DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
           node "$DIR/server/index.mjs"
           EOF
